projects/compiler/test/typechecker/array/error_type_mismatch_item.4.out
Error at %FILE_NAME%:1:6
Type mismatch
  |  [[], #{}, [1, 2]]
          ^
Expected: Int[]
but instead found: Set<<unknown>>
